# qt_task1_draw

task_draw/: CMakeLists.txt  datadialog.cpp  datadialog.h  main.cpp  mainwindow.cpp  mainwindow.h  paintArea.cpp  paintArea.h
